syntax = "proto3";
package MsgPB;
import "GameDef.proto";
import "GameRoomPlayer.proto";

message GameRoomOnePlayerCache{
    GameRoomPlayerInfo m_playerInfo = 1;
    Vector2 m_lastPos = 2;
    Vector2 m_lastVelocity = 3;
    bool m_dirLeft = 4;
}

message GameRoomCache{
    repeated GameRoomOnePlayerCache m_lstCachePlayer = 2;
}